<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:ems="10"
        android:hint="@string/instruction"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/btnAddInstruction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etTimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/timer_minutes"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/etInstruction"
        app:layout_constraintStart_toStartOf="@+id/etInstruction"
        app:layout_constraintTop_toBottomOf="@+id/etInstruction"
        android:autofillHints=""
        tools:ignore="VisualLintTextFieldSize" />

    <ImageButton
        android:id="@+id/btnAddInstruction"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/add_instruction"
        app:layout_constraintBottom_toBottomOf="@+id/etTimer"
        app:layout_constraintDimensionRatio="H,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etInstruction"
        app:srcCompat="@drawable/baseline_add_24" />

    <ListView
        android:id="@+id/lvInstructions"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>